# pinchy_robot

./: .gitignore
log/: latest_build
pinchy_robot/: README.md  package.xml  sample_actions.txt  setup.cfg  setup.py
pinchy_robot/launch/: demo_launch.py  display.launch.py  gazebo_launch.py  pinchy.launch.xml
pinchy_robot/pinchy_robot/: state_publisher.py
pinchy_robot/pinchy_robot_application/: CMakeLists.txt  package.xml  plugin.xml
pinchy_robot/pinchy_robot_application/hardware/: pinchy.cpp
pinchy_robot/pinchy_robot_application/hardware/include/pinchy_robot_application/: pinchy.hpp
pinchy_robot/pinchy_robot_bringup/: CMakeLists.txt  package.xml
pinchy_robot/pinchy_robot_bringup/config/: pinchy.rviz  pinchy_bridge.yaml  pinchy_controllers.yaml  pinchy_forward_position_publisher.yaml
pinchy_robot/pinchy_robot_bringup/launch/: pinchy.launch.py  pinchy_control.launch.py  pinchy_gz.launch.py
pinchy_robot/pinchy_robot_description/: CMakeLists.txt  package.xml
pinchy_robot/pinchy_robot_description/launch/: view_robot.launch.py
pinchy_robot/pinchy_robot_description/models/: pinchy.gazebo.xacro  pinchy.materials.xacro  pinchy.ros2_control.xacro  pinchy.rviz  pinchy.urdf.xacro  pinchy_description.urdf.xacro  pinchy_onshape.urdf.xacro
pinchy_robot/pinchy_robot_description/models/mesh/: 001_base.stl  002_mainarm.stl  003_varm.stl  004_link_135.stl  005_link_135angled.stl  006_horarm.stl  007_trialink.stl  008_link_147.stl  009_trialinkfront.stl  010_gearservo.stl  011_gearmast.stl  012_base.stl  013_lower_base.stl  014_clawbase.stl  015_clawfingerdx.stl  016.stl  017_clawfingersx.stl  018_clawgeardriven.stl  019_cover.stl  020_ball.stl
pinchy_robot/pinchy_robot_description/models/pinchy/: model.config  model.sdf  pinchy.sdf  pinchy.urdf  pinchy.urdf.xacro  pinchy_core.xacro
pinchy_robot/pinchy_robot_gazebo/: CMakeLists.txt  README.md  package.xml
pinchy_robot/pinchy_robot_gazebo/include/pinchy_robot_gazebo/: BasicSystem.hh  FullSystem.hh
pinchy_robot/pinchy_robot_gazebo/src/: BasicSystem.cc  FullSystem.cc
pinchy_robot/pinchy_robot_gazebo/worlds/: pinchy.sdf
pinchy_robot/urdf/: pinchy.rviz  pinchy.urdf  pinchy.urdf.xml
pinchy_webots/: CMakeLists.txt  my_robot_driver.xml  package.xml
pinchy_webots/include/pinchy_webots/: MyRobotDriver.hpp
pinchy_webots/launch/: robot_launch.py
pinchy_webots/src/: MyRobotDriver.cpp
