<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pinchy_robot_description</name>
  <version>0.0.0</version>
  <description>URDF description files for the pinchy_robot project</description>
  <maintainer email="kouwenhoven.frans@gmail.com">Frans Kouwenhoven</maintainer>
  <license>Apache 2.0</license>
  <author>Frans Kouwenhoven</author>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
